gtest は target_include_directories(PUBLIC) が大好きらしいので仕方がない。

--- a/llvm/utils/unittest/UnitTestMain/CMakeLists.txt
+++ b/llvm/utils/unittest/UnitTestMain/CMakeLists.txt
@@ -10,3 +10,5 @@ add_llvm_library(gtest_main
   # This library is not meant to be in the install tree, only the build tree.
   BUILDTREE_ONLY
   )
+
+target_link_libraries(gtest_main PUBLIC gtest)
