--- a/llvm/CMakeLists.txt
+++ b/llvm/CMakeLists.txt
@@ -2,7 +2,9 @@
 
 cmake_minimum_required(VERSION 3.13.4)
 
-cmake_policy(SET CMP0116 OLD)
+if(NOT CMAKE_VERSION VERSION_LESS 3.20)
+  cmake_policy(SET CMP0116 OLD)
+endif()
 
 set(CMAKE_BUILD_WITH_INSTALL_NAME_DIR ON)
 
