--- a/llvm/CMakeLists.txt
+++ b/llvm/CMakeLists.txt
@@ -922,6 +922,7 @@ endif()
 add_subdirectory(lib/Demangle)
 add_subdirectory(lib/Support)
 add_subdirectory(lib/TableGen)
+add_subdirectory(utils/TableGen/GlobalISel)
 
 add_subdirectory(utils/TableGen)
 
