llvm/module.cache をつくて集約した!

--- a/llvm/CMakeLists.txt
+++ b/llvm/CMakeLists.txt
@@ -1151,6 +1151,6 @@ endif()
 
 ##############################################################################
 if (LLVM_ENABLE_MODULES)
-  add_subdirectory(xxx)
+  add_subdirectory(module.cache)
 endif()
 ##############################################################################
