llvm/lib: Introduce LLVSupportLite as subset of LLVMSupport for tablegen.
Tablegen requires part of LLVMSupport and doesn't require LLVMDemangle.
It reduces bottleneck and increases parallelism in LLVM build.

With BUILD_SHARED_LIBS, LLVMTableGen refers just LLVMSupport to avoid redundancy.

--- a/llvm/lib/TableGen/CMakeLists.txt
+++ b/llvm/lib/TableGen/CMakeLists.txt
@@ -13,7 +13,10 @@ add_llvm_component_library(LLVMTableGen
 
   ADDITIONAL_HEADER_DIRS
   ${LLVM_MAIN_INCLUDE_DIR}/llvm/TableGen
-
-  LINK_COMPONENTS
-  Support
   )
+
+if (BUILD_SHARED_LIBS)
+  target_link_libraries(LLVMTableGen PUBLIC LLVMSupport)
+else()
+  target_link_libraries(LLVMTableGen INTERFACE LLVMSupportLite)
+endif()
