Revert "LLVMTableGenLite + LLVMSupportLite (企画倒れ)"
This reverts commit a0ea7a39fefe3d922845c16cb493cb811b283f8f.

--- a/llvm/utils/TableGen/CMakeLists.txt
+++ b/llvm/utils/TableGen/CMakeLists.txt
@@ -1,5 +1,7 @@
 #add_subdirectory(GlobalISel)
 
+set(LLVM_LINK_COMPONENTS Support)
+
 add_tablegen(llvm-tblgen LLVM
   AsmMatcherEmitter.cpp
   AsmWriterEmitter.cpp
@@ -54,6 +56,5 @@ add_tablegen(llvm-tblgen LLVM
   WebAssemblyDisassemblerEmitter.cpp
   CTagsEmitter.cpp
   )
-
 target_link_libraries(llvm-tblgen PRIVATE LLVMTableGenGlobalISel)
 set_target_properties(llvm-tblgen PROPERTIES FOLDER "Tablegenning")
