llvm-tblgen 完全に分解した。 (cmake)

--- a/llvm/utils/TableGen/CMakeLists.txt
+++ b/llvm/utils/TableGen/CMakeLists.txt
@@ -1,59 +1,162 @@
 add_tablegen(llvm-tblgen LLVM
-  AsmMatcherEmitter.cpp
-  AsmWriterEmitter.cpp
-  AsmWriterInst.cpp
+  TableGen.cpp
+
+  MODULE attrs
   Attributes.cpp
+
+  MODULE ctags
+  CTagsEmitter.cpp
+
+  MODULE exegesis
+  ExegesisEmitter.cpp
+
+  MODULE opt-rst
+  OptEmitter.cpp
+  OptRSTEmitter.cpp
+  SHARED
+
+  MODULE opt-parser-defs
+  OptParserEmitter.cpp
+  DEPENDS opt-rst
+
+  MODULE directive-decl
+  DirectiveEmitter.cpp
+  GenDirectivesEnumDecl.cpp
+  SHARED
+
+  MODULE directive-gen
+  GenDirectivesEnumGen.cpp
+  DEPENDS directive-decl
+
+  MODULE directive-impl
+  GenDirectivesEnumImpl.cpp
+  DEPENDS directive-decl
+
+  MODULE automata
+  DFAEmitter.cpp
+  SHARED
+
+  MODULE intrinsic-enums
+  CodeGenIntrinsics.cpp
+  IntrinsicEnumsEmitter.cpp
+  SDNodeProperties.cpp
+  SHARED
+
+  MODULE searchable-tables
+  SearchableTableEmitter.cpp
+  DEPENDS intrinsic-enums
+
+  MODULE intrinsic-impl
+  EmitLongStrLiterals.cpp
+  IntrinsicImplEmitter.cpp
+  DEPENDS intrinsic-enums
+  SHARED
+
+  MODULE callingconv
   CallingConvEmitter.cpp
-  CodeEmitterGen.cpp
-  CodeGenDAGPatterns.cpp
   CodeGenHwModes.cpp
   CodeGenInstruction.cpp
-  CodeGenIntrinsics.cpp
-  CodeGenMapTable.cpp
   CodeGenRegisters.cpp
   CodeGenSchedule.cpp
   CodeGenTarget.cpp
+  InfoByHwMode.cpp
+  DEPENDS intrinsic-enums
+  SHARED
+
+  MODULE x86-EVEX2VEX-tables
+  X86EVEX2VEXTablesEmitter.cpp
+  DEPENDS callingconv
+
+  MODULE pseudo-lowering
+  PseudoLoweringEmitter.cpp
+  DEPENDS callingconv
+
+  MODULE x86-fold-tables
+  X86FoldTablesEmitter.cpp
+  DEPENDS callingconv
+
+  MODULE register-bank
+  RegisterBankEmitter.cpp
+  DEPENDS callingconv
+
+  MODULE compress-inst-emitter
+  RISCVCompressInstEmitter.cpp
+  DEPENDS callingconv
+
+  MODULE dfa-packetizer
+  DFAPacketizerEmitter.cpp
+  DEPENDS automata callingconv
+
+  MODULE emitter
+  CodeEmitterGen.cpp
+  SubtargetFeatureInfo.cpp
+  Types.cpp
+  DEPENDS callingconv
+  SHARED
+
+  MODULE register-info
+  RegisterInfoEmitter.cpp
+  DEPENDS emitter intrinsic-impl
+
+  MODULE subtarget
+  PredicateExpander.cpp
+  SubtargetEmitter.cpp
+  DEPENDS callingconv
+  SHARED
+
+  MODULE asm-writer
+  AsmWriterEmitter.cpp
+  AsmWriterInst.cpp
+  DEPENDS emitter intrinsic-impl
+
+  MODULE asm-matcher
+  AsmMatcherEmitter.cpp
+  DEPENDS emitter
+
+  MODULE disassembler
+  DisassemblerEmitter.cpp
+  FixedLenDecoderEmitter.cpp
+  WebAssemblyDisassemblerEmitter.cpp
+  X86DisassemblerTables.cpp
+  X86ModRMFilters.cpp
+  X86RecognizableInstr.cpp
+  DEPENDS callingconv
+
+  MODULE instr-docs
+  CodeGenDAGPatterns.cpp
+  InstrDocsEmitter.cpp
+  DEPENDS callingconv
+  SHARED
+
+  MODULE fast-isel
+  FastISelEmitter.cpp
+  DEPENDS instr-docs
+
+  MODULE instr-info
+  CodeGenMapTable.cpp
+  InstrInfoEmitter.cpp
+  DEPENDS instr-docs intrinsic-impl subtarget
+
+  MODULE global-isel
+  GlobalISelEmitter.cpp
+  DEPENDS emitter instr-docs
+
+  MODULE dag-isel
   DAGISelEmitter.cpp
+  DAGISelMatcher.cpp
   DAGISelMatcherEmitter.cpp
   DAGISelMatcherGen.cpp
   DAGISelMatcherOpt.cpp
-  DAGISelMatcher.cpp
-  DFAEmitter.cpp
-  DFAPacketizerEmitter.cpp
-  DirectiveEmitter.cpp
-  DisassemblerEmitter.cpp
-  EmitLongStrLiterals.cpp
-  ExegesisEmitter.cpp
-  FastISelEmitter.cpp
-  FixedLenDecoderEmitter.cpp
+  DEPENDS instr-docs
+
+  MODULE global-isel-combiner
   GICombinerEmitter.cpp
-  GlobalISelEmitter.cpp
-  InfoByHwMode.cpp
-  InstrInfoEmitter.cpp
-  InstrDocsEmitter.cpp
-  IntrinsicEnumsEmitter.cpp
-  IntrinsicImplEmitter.cpp
-  OptEmitter.cpp
-  OptParserEmitter.cpp
-  OptRSTEmitter.cpp
-  PredicateExpander.cpp
-  PseudoLoweringEmitter.cpp
-  RISCVCompressInstEmitter.cpp
-  RegisterBankEmitter.cpp
-  RegisterInfoEmitter.cpp
-  SDNodeProperties.cpp
-  SearchableTableEmitter.cpp
-  SubtargetEmitter.cpp
-  SubtargetFeatureInfo.cpp
-  TableGen.cpp
-  Types.cpp
-  X86DisassemblerTables.cpp
-  X86EVEX2VEXTablesEmitter.cpp
-  X86FoldTablesEmitter.cpp
-  X86ModRMFilters.cpp
-  X86RecognizableInstr.cpp
-  WebAssemblyDisassemblerEmitter.cpp
-  CTagsEmitter.cpp
-  )
-target_link_libraries(llvm-tblgen PRIVATE LLVMTableGenGlobalISel)
+  $<TARGET_OBJECTS:obj.LLVMTableGenGlobalISel>
+  DEPENDS callingconv
+  SHARED
+  ) # add_tablegen
 set_target_properties(llvm-tblgen PROPERTIES FOLDER "Tablegenning")
+
+if (TARGET llvm-tblgen-global-isel-combiner)
+  add_library(LLVMTableGenGlobalISel ALIAS llvm-tblgen-global-isel-combiner)
+endif()
