gen-global-isel

--- a/llvm/utils/TableGen/CMakeLists.txt
+++ b/llvm/utils/TableGen/CMakeLists.txt
@@ -32,7 +32,6 @@ add_tablegen(llvm-tblgen LLVM
   DisassemblerEmitter.cpp
   FixedLenDecoderEmitter.cpp
   GICombinerEmitter.cpp
-  GlobalISelEmitter.cpp
   InstrInfoEmitter.cpp
   InstrDocsEmitter.cpp
   IntrinsicEmitter.cpp
@@ -154,5 +153,17 @@ add_llvm_library(llvm-tblgen-fast-isel MODULE
   LLVMSupport
   )
 add_dependencies(llvm-tblgen-all llvm-tblgen-fast-isel)
+
+add_llvm_library(llvm-tblgen-global-isel MODULE
+  GlobalISelEmitter.cpp
+
+  PARTIAL_SOURCES_INTENDED
+
+  LINK_LIBS
+  LLVMTableGenCodeGen
+  LLVMTableGen
+  LLVMSupport
+  )
+add_dependencies(llvm-tblgen-all llvm-tblgen-global-isel)
 
 llvm_check_source_file_list()
