gen-searchable-tables

--- a/llvm/utils/TableGen/CMakeLists.txt
+++ b/llvm/utils/TableGen/CMakeLists.txt
@@ -39,7 +39,6 @@ add_tablegen(llvm-tblgen LLVM
   OptRSTEmitter.cpp
   PseudoLoweringEmitter.cpp
   RISCVCompressInstEmitter.cpp
-  SearchableTableEmitter.cpp
   TableGen.cpp
   X86DisassemblerTables.cpp
   X86ModRMFilters.cpp
@@ -233,5 +232,17 @@ add_llvm_library(llvm-tblgen-x86-fold-tables MODULE
   LLVMSupport
   )
 add_dependencies(llvm-tblgen-all llvm-tblgen-x86-fold-tables)
+
+add_llvm_library(llvm-tblgen-searchable-tables MODULE
+  SearchableTableEmitter.cpp
+
+  PARTIAL_SOURCES_INTENDED
+
+  LINK_LIBS
+  LLVMTableGenCodeGen
+  LLVMTableGen
+  LLVMSupport
+  )
+add_dependencies(llvm-tblgen-all llvm-tblgen-searchable-tables)
 
 llvm_check_source_file_list()
