gen-pseudo-lowering

--- a/llvm/utils/TableGen/CMakeLists.txt
+++ b/llvm/utils/TableGen/CMakeLists.txt
@@ -37,7 +37,6 @@ add_tablegen(llvm-tblgen LLVM
   OptEmitter.cpp
   OptParserEmitter.cpp
   OptRSTEmitter.cpp
-  PseudoLoweringEmitter.cpp
   TableGen.cpp
   X86DisassemblerTables.cpp
   X86ModRMFilters.cpp
@@ -255,5 +254,17 @@ add_llvm_library(llvm-tblgen-compress-inst-emitter MODULE
   LLVMSupport
   )
 add_dependencies(llvm-tblgen-all llvm-tblgen-compress-inst-emitter)
+
+add_llvm_library(llvm-tblgen-pseudo-lowering MODULE
+  PseudoLoweringEmitter.cpp
+
+  PARTIAL_SOURCES_INTENDED
+
+  LINK_LIBS
+  LLVMTableGenCodeGen
+  LLVMTableGen
+  LLVMSupport
+  )
+add_dependencies(llvm-tblgen-all llvm-tblgen-pseudo-lowering)
 
 llvm_check_source_file_list()
